kubernetes/flask/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    name: pushups-logger
  name: pushups-logger
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 3
  selector:
    matchLabels:
      app: pushups-logger
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pushups-logger
    spec:
      containers:
        - env:
          image: itsron143/pushups-logger:latest
          imagePullPolicy: Always
          name: pushups-logger
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          command: ["/bin/sh"]
          args: ["-c", "while true; do echo hello; sleep 10;done"]
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
