kubernetes/flask/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushups-logger
  labels:
    service: pushups-logger
spec:
  selector:
    app: pushups-logger
  ports:
    - port: 5001
      targetPort: 5001
